fix: footer background on dark mode

--- a/styles/themes/_dark.scss
+++ b/styles/themes/_dark.scss
@@ -231,6 +231,13 @@ html.dark-mode {
         }
       }
     }
+
+    .left-blurred-image {
+      right: -62rem;
+      top: -68rem;
+      left: unset;
+
+    }
   }
 
 
